:zap: Fix color contrast issues

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -21,12 +21,12 @@
   }
 
   .footerCopyrights {
-    color: var(--neutralgrey);
+    color: var(--high-contrast-dark);
     font-size: 0.875em;
   }
 
   .noCookies {
-    color: var(--neutralgrey);
+    color: var(--high-contrast-dark);
   }
 
   .noTracking {
